welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite()
droite()
while (estSurUnBiscuit()!= true ){
	avance();
}
